syntax = "proto3";

import "google/protobuf/timestamp.proto";

service Yacchauyo {
  rpc TextsIndex (TextsQuery) returns (Texts);
  rpc CreateText (Text) returns (Text);
  rpc PatchText (Text) returns (Text);

  rpc TextSchema (TextsQuery) returns (Schema);
  rpc PatchSchema (Schema) returns (Schema);

  rpc QueryFragments (FragmentsQuery) returns (FragmentsQuery);
}

message Text {
  string id = 1;
  string title = 2;
  string slug = 3;
  string authors = 4;
  string description = 5;
}

message Texts {
  repeated Text texts = 1;
}

message TextsQuery {
  string id = 1;
  string title = 2;
}

message Schema {
  string id = 1;
  string text_id = 2;
  repeated string paths = 3;
  google.protobuf.Timestamp created_at = 4;
}

message Fragment {
  string id = 1;
  string schema_path = 2;
  string text_id = 3;
  google.protobuf.Timestamp created_at = 4;
  string value = 5;
}

message FragmentsQuery {
  repeated Fragment fragments = 1;
  string prefix = 2;
  string text_id = 3;
}
